2023-01-14 Alan Grossfield <alan>
	* make_library missing from install

2022-07-29 Alan Grossfield <alan>
	* Add new tool add_bonds.py to copy connectivity information

2022-05-25 Alan Grossfield <alan>
	* add PCA option to all_contacts.py to identify latent structures

2022-03-16 Alan Grossfield <alan>
	* Fix LoosOptions issues so fullhelps work correctly in several PyLOOS
	  tools (#71)
	* Partially fixes #72, required arguments make a mess of things

2021-11-22 Tod Romo <tromo>
	* Merged branch RamaResidues, contributed by Louis Smith.  This adds
	  a resid column to the output of ramachandran.

2021-11-19 Alan Grossfield <alan>
	* Merged new tool rare-event-detection.py, contributed
	  by Grace Julien

2021-11-12 Alan Grossfield <alan>
	* Merge branch pdbelement, use atomic mass info to fill the
	  element field when writing PDB files

2021-11-01 Alan Grossfield <alan>
	* Add json output to sysinfo.py

2021-10-11 Alan Grossfield <alan>
	* Add new tool sysinfo.py, print summary info to stdout

2021-06-15 Alan Grossfield <alan>
	* Merged in stacking branch, new tools for nucleic acid base stacking

2021-05-31 Alan Grossfield <alan>
	* Merged in python-options branch, preliminary tools for uniform command
	  line arguments in python
	* New tool: all_contacts.py, like rmsds but in contact space

2021-05-10 Tod Romo <tromo>
	* More fixes to gmxdump2pdb.pl to deal with updates to gmx dump,
	  fixed error where some constraints were mixed

2021-05-06 Alan Grossfield <alan>
	* added new method to AtomicGroup to orient the group along a supplied axis

2021-05-05 Alan Grossfield <alan>
	* fixed bug in reading TinkerArc files with periodic boxes

2021-04-08 Alan Grossfield <alan>
    * add frameBoundaries to VirtualTrajectory

2021-04-02 Alan Grossfield <alan>
	* Merged scattering tool

2021-01-21  Release version 3.3
2021-01-18  Alan Grossfield <alan>
	* Merged in ocf tool

2021-01-05  Alan Grossfield <alan>
	*  Merged dipole computation into membrane_map
