@@ -4,6 +4,8 @@ set(LOOS_USER_TOOLS
     simple_model_transform
     traj_calc
     traj_transform
+    test_mmcif
+    test_mmcif_2
 )
 
 foreach(TOOL ${LOOS_USER_TOOLS})
