@@ -1,3 +1,6 @@
+2023-12-28 Alan Grossfield <alan>
+	* mmcif/pdbx support
+
 2023-01-14 Alan Grossfield <alan>
 	* make_library missing from install
 
